frontend/test/should_pass/computations_var.grg
function one() : int
{
	def var temp1:int = 0;
	def var temp2:int = temp1 + 1;
	return(temp2);
}

test t : (int)
{	
	independent {
	---
		yield {
			def var temp1:int = 0;
			def var temp2:int = temp1 + 1;
			yield res = temp2;
		}
	}
---
	def var res:int;
	
	return (res);
}

rule r : (int)
{	
	modify {
	---
		def var res:int;
		
		eval { 
			def var temp1:int = 0;
			def var temp2:int = temp1 + 1;
			yield res = temp2;
		}
		
		return (res);
	}
}
