frontend/test/should_fail/computations_no_use_before_def_001.grg
function one() : int
{
	res = 1;
	def var res:int;
	return(res);
}

